# pretrained-dog-breed-identifier

./: README.md  adjust_results4_isadog.py  alexnet_pet-images.txt  alexnet_uploaded-images.txt  calculates_results_stats.py  check_images.py  classifier.py  classify_images.py  final_results.txt  get_input_args.py  get_pet_labels.py  print_results.py  pyproject.toml  requirements.txt  resnet_pet-images.txt  resnet_uploaded-images.txt  vgg_pet-images.txt  vgg_uploaded-images.txt
