[project]
name = "pretrained-dog-breed-identifier"
version = "0.1.0"
description = "A Python project comparing pre-trained CNN architectures (AlexNet, VGG, ResNet) for dog breed identification. It evaluates classifier performance in accuracy and runtime."
authors = [
    {name = "Sushmitha047"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.2)",
    "certifi (==2024.12.14)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.1)",
    "cleo (==2.1.0)",
    "crashtest (==0.4.1)",
    "distlib (==0.3.9)",
    "dulwich (==0.22.7)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.16.1)",
    "fsspec (==2024.12.0)",
    "idna (==3.10)",
    "installer (==0.7.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.1.0)",
    "jinja2 (==3.1.5)",
    "keyring (==25.6.0)",
    "markupsafe (==3.0.2)",
    "more-itertools (==10.6.0)",
    "mpmath (==1.3.0)",
    "msgpack (==1.1.0)",
    "networkx (==3.4.2)",
    "numpy (==2.2.1)",
    "packaging (==24.2)",
    "pillow (==11.1.0)",
    "pkginfo (==1.12.0)",
    "platformdirs (==4.3.6)",
    "poetry (==2.0.1)",
    "poetry-core (==2.0.1)",
    "pycparser (==2.22)",
    "pyproject-hooks (==1.2.0)",
    "rapidfuzz (==3.11.0)",
    "requests (==2.32.3)",
    "requests-toolbelt (==1.0.0)",
    "setuptools (==75.8.0)",
    "shellingham (==1.5.4)",
    "sympy (==1.13.1)",
    "tomlkit (==0.13.2)",
    "torch (==2.5.1)",
    "torchvision (==0.20.1)",
    "trove-classifiers (==2025.1.15.22)",
    "typing-extensions (==4.12.2)",
    "urllib3 (==2.3.0)",
    "virtualenv (==20.29.1)",
    "xattr (==1.1.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
